--- a/src/components/organisms/our-mission/OurMission.scss
+++ b/src/components/organisms/our-mission/OurMission.scss
@@ -22,6 +22,10 @@
         }
 
         & p{
+            @media (min-width:$xxxl){
+                font-size: 3.5rem;
+                line-height: 3.9rem;
+            }
             padding-top: 6rem;
             color: $black;
             font-size: $p;
@@ -36,6 +40,9 @@
             padding: $vertical-padding $our-mission-padding;
 
             & h3{
+                @media (min-width:$xxxl){
+                    font-size: 4rem;
+                }
                 color: $white;
                 font-size: $h3;
                 font-family: $oswald;
@@ -44,6 +51,10 @@
             }
 
             & p{
+
+                @media (min-width: $xxxl){
+                    font-size: 2.9rem;
+                }
                 color: $white;
                 font-size: $details;
                 opacity: .5;
@@ -56,6 +67,10 @@
         @media (min-width:$lg){
             background-size: cover;
             background-position: center;
+        }
+
+        @media (min-width: $xxxl){
+            height: 1000px;
         }
         width: 50%;
         background: url('../../../assets/our-mission-photo.png');
