--- a/src/components/organisms/portfolio/Portfolio.scss
+++ b/src/components/organisms/portfolio/Portfolio.scss
@@ -54,10 +54,7 @@
 
 
 .portfolio-img{
-    @media(max-width:$xl){
-        height: 45rem;
-    }
-    height:35rem;
+    height:45rem;
 }
 
 .portfolio__img-1 {
@@ -73,7 +70,7 @@
     grid-area: 1 / 2 / 2 / 3; 
     background: url('../../../assets/portfolio-1.png');
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 
 
@@ -89,7 +86,7 @@
     grid-area: 2 / 1 / 3 / 2;
     background: url('../../../assets/portfolio-2.png'); 
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
 
 .portfolio__img-3 {
@@ -104,7 +101,7 @@
     grid-area: 2 / 2 / 3 / 3;
     background: url('../../../assets/portfolio-3.png');
     background-repeat: no-repeat;
-    background-size: contain; 
+    background-size: cover; 
 }
 
 .portfolio__img-4 {
@@ -115,7 +112,7 @@
     grid-area: 3 / 1 / 4 / 2;
     background: url('../../../assets/portfolio-4.png');
     background-repeat: no-repeat;
-    background-size: contain;  
+    background-size: cover;  
 }
 
 .portfolio__img-5 { 
@@ -130,5 +127,5 @@
     grid-area: 3 / 2 / 4 / 3;
     background: url('../../../assets/portfolio-5.png');
     background-repeat: no-repeat;
-    background-size: contain; 
+    background-size: cover; 
 }
